Adding pagination to schedule
